create cv application pages

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1829,5 +1829,63 @@
   "boilerplate.containers.Payroll.recruitment.division": "القسم",
   "boilerplate.containers.Payroll.recruitment.description": "الوصف",
   "boilerplate.containers.Payroll.recruitment.section": "القطاع",
-  "boilerplate.containers.Payroll.recruitment.expireDate": "تاريخ الانتهاء"
+  "boilerplate.containers.Payroll.recruitment.expireDate": "تاريخ الانتهاء",
+
+  "boilerplate.containers.Payroll.cv.email": "البريد الإلكتروني",
+  "boilerplate.containers.Payroll.cv.phone": "الهاتف",
+  "boilerplate.containers.Payroll.cv.contact": "أبق علي تواصل",
+  "boilerplate.containers.Payroll.cv.allRightReserved": "جميع الحقوق محفوظة",
+  "boilerplate.containers.Payroll.cv.yearsOfExperience": "سنوات الخبرة",
+  "boilerplate.containers.Payroll.cv.close": "إغلاق",
+  "boilerplate.containers.Payroll.cv.showDetails": "عرض التفاصيل",
+  "boilerplate.containers.Payroll.cv.personalInfo": "معلومات شخصية",
+  "boilerplate.containers.Payroll.cv.uploadedFileIsLargerThan1MB": "الملف المرفوع أكبر من 1 ميغابايت",
+  "boilerplate.containers.Payroll.cv.fullName": "الاسم الكامل",
+  "boilerplate.containers.Payroll.cv.militaryStatus": "الحالة العسكرية",
+  "boilerplate.containers.Payroll.cv.gender": "النوع",
+  "boilerplate.containers.Payroll.cv.uploadCV": "رفع السيرة الذاتية",
+  "boilerplate.containers.Payroll.cv.preview": "معاينة",
+  "boilerplate.containers.Payroll.cv.uploadImage": "رفع الصورة",
+  "boilerplate.containers.Payroll.cv.personalIDInfo": "معلومات الهوية الشخصية",
+  "boilerplate.containers.Payroll.cv.IDType": "نوع الهوية",
+  "boilerplate.containers.Payroll.cv.IDNumber": "رقم الهوية",
+  "boilerplate.containers.Payroll.cv.issuePlace": "مكان الإصدار",
+  "boilerplate.containers.Payroll.cv.issueDate": "تاريخ الإصدار",
+  "boilerplate.containers.Payroll.cv.personalExtraInfo": "معلومات إضافية شخصية",
+  "boilerplate.containers.Payroll.cv.socialStatus": "الوضع الاجتماعي",
+  "boilerplate.containers.Payroll.cv.childrenNumber": "عدد الأطفال",
+  "boilerplate.containers.Payroll.cv.birthDate": "تاريخ الميلاد",
+  "boilerplate.containers.Payroll.cv.address": "العنوان",
+  "boilerplate.containers.Payroll.cv.relativePhoneNumber": "رقم الهاتف للقرابة",
+  "boilerplate.containers.Payroll.cv.hasDrivingLicense": "لديه رخصة قيادة",
+  "boilerplate.containers.Payroll.cv.hasCar": "لديه سيارة",
+  "boilerplate.containers.Payroll.cv.educationalInfo": "معلومات التعليم",
+  "boilerplate.containers.Payroll.cv.qualification": "المؤهل",
+  "boilerplate.containers.Payroll.cv.graduationPlace": "مكان التخرج",
+  "boilerplate.containers.Payroll.cv.graduationGrade": "درجة التخرج",
+  "boilerplate.containers.Payroll.cv.graduationDate": "تاريخ التخرج",
+  "boilerplate.containers.Payroll.cv.computerSkills": "مهارات الحاسوب",
+  "boilerplate.containers.Payroll.cv.workExperienceInfo": "معلومات الخبرة العملية",
+  "boilerplate.containers.Payroll.cv.addExperience": "إضافة خبرة",
+  "boilerplate.containers.Payroll.cv.noExperience": "لا توجد خبرة",
+  "boilerplate.containers.Payroll.cv.coursesInfo": "معلومات الدورات",
+  "boilerplate.containers.Payroll.cv.addCourse": "إضافة دورة",
+  "boilerplate.containers.Payroll.cv.editCourse": "تعديل الدورة",
+  "boilerplate.containers.Payroll.cv.noCourses": "لا توجد دورات",
+  "boilerplate.containers.Payroll.cv.jobInfo": "معلومات الوظيفة",
+  "boilerplate.containers.Payroll.cv.jobTitle": "المسمى الوظيفي",
+  "boilerplate.containers.Payroll.cv.workType": "نوع العمل",
+  "boilerplate.containers.Payroll.cv.expectedSalary": "الراتب المتوقع",
+  "boilerplate.containers.Payroll.cv.insuranceNumber": "رقم التأمين",
+  "boilerplate.containers.Payroll.cv.linkSource": "مصدر الرابط",
+  "boilerplate.containers.Payroll.cv.submitApplication": "تقديم الطلب",
+  "boilerplate.containers.Payroll.cv.endDate": "تاريخ الانتهاء",
+  "boilerplate.containers.Payroll.cv.save": "حفظ",
+  "boilerplate.containers.Payroll.cv.backToJobVacation": "العودة إلى الوظائف الشاغرة",
+  "boilerplate.containers.Payroll.cv.courseTitle": "عنوان الدورة",
+  "boilerplate.containers.Payroll.cv.editExperience": "تعديل الخبرة",
+  "boilerplate.containers.Payroll.cv.department": "القسم",
+  "boilerplate.containers.Payroll.cv.workPlace": "مكان العمل",
+  "boilerplate.containers.Payroll.cv.leaveReason": "سبب الاستقالة",
+  "boilerplate.containers.Payroll.cv.startDate": "تاريخ البدء"
 }
