--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1783,5 +1783,62 @@
   "boilerplate.containers.Payroll.recruitment.enterDetailsData": "Enter Details Data",
   "boilerplate.containers.Payroll.recruitment.description": "Description",
   "boilerplate.containers.Payroll.recruitment.section": "Section",
-  "boilerplate.containers.Payroll.recruitment.expireDate": "Expire Date"
+
+  "boilerplate.containers.Payroll.cv.email": "Email",
+  "boilerplate.containers.Payroll.cv.phone": "Phone",
+  "boilerplate.containers.Payroll.cv.contact": "Contact",
+  "boilerplate.containers.Payroll.cv.allRightReserved": "All Right Reserved",
+  "boilerplate.containers.Payroll.cv.yearsOfExperience": "Years Of Experience",
+  "boilerplate.containers.Payroll.cv.close": "Close",
+  "boilerplate.containers.Payroll.cv.showDetails": "Show Details",
+  "boilerplate.containers.Payroll.cv.personalInfo": "Personal Info",
+  "boilerplate.containers.Payroll.cv.uploadedFileIsLargerThan1MB": "uploaded file is larger than 1MB",
+  "boilerplate.containers.Payroll.cv.fullName": "Full Name",
+  "boilerplate.containers.Payroll.cv.militaryStatus": "Military Status",
+  "boilerplate.containers.Payroll.cv.gender": "Gender",
+  "boilerplate.containers.Payroll.cv.uploadCV": "Upload CV",
+  "boilerplate.containers.Payroll.cv.preview": "Preview",
+  "boilerplate.containers.Payroll.cv.uploadImage": "Upload Image",
+  "boilerplate.containers.Payroll.cv.personalIDInfo": "Personal ID Info",
+  "boilerplate.containers.Payroll.cv.IDType": "ID Type",
+  "boilerplate.containers.Payroll.cv.IDNumber": "ID Number",
+  "boilerplate.containers.Payroll.cv.issuePlace": "Issue Place",
+  "boilerplate.containers.Payroll.cv.issueDate": "Issue Date",
+  "boilerplate.containers.Payroll.cv.personalExtraInfo": "Personal Extra Info",
+  "boilerplate.containers.Payroll.cv.socialStatus": "Social Status",
+  "boilerplate.containers.Payroll.cv.childrenNumber": "Children Number",
+  "boilerplate.containers.Payroll.cv.birthDate": "Birth Date",
+  "boilerplate.containers.Payroll.cv.address": "Address",
+  "boilerplate.containers.Payroll.cv.relativePhoneNumber": "Relative Phone Number",
+  "boilerplate.containers.Payroll.cv.hasDrivingLicense": "Has Driving License",
+  "boilerplate.containers.Payroll.cv.hasCar": "Has Car",
+  "boilerplate.containers.Payroll.cv.educationalInfo": "Educational Info",
+  "boilerplate.containers.Payroll.cv.qualification": "Qualification",
+  "boilerplate.containers.Payroll.cv.graduationPlace": "Graduation Place",
+  "boilerplate.containers.Payroll.cv.graduationGrade": "Graduation Grade",
+  "boilerplate.containers.Payroll.cv.graduationDate": "Graduation Date",
+  "boilerplate.containers.Payroll.cv.computerSkills": "Computer Skills",
+  "boilerplate.containers.Payroll.cv.workExperienceInfo": "Work Experience Info",
+  "boilerplate.containers.Payroll.cv.addExperience": "Add Experience",
+  "boilerplate.containers.Payroll.cv.noExperience": "No Experience",
+  "boilerplate.containers.Payroll.cv.coursesInfo": "Courses Info",
+  "boilerplate.containers.Payroll.cv.addCourse": "Add Course",
+  "boilerplate.containers.Payroll.cv.editCourse": "Edit Course",
+  "boilerplate.containers.Payroll.cv.noCourses": "No Courses",
+  "boilerplate.containers.Payroll.cv.jobInfo": "Job Info",
+  "boilerplate.containers.Payroll.cv.jobTitle": "Job Title",
+  "boilerplate.containers.Payroll.cv.workType": "Work Type",
+  "boilerplate.containers.Payroll.cv.expectedSalary": "Expected Salary",
+  "boilerplate.containers.Payroll.cv.insuranceNumber": "Insurance Number",
+  "boilerplate.containers.Payroll.cv.linkSource": "Link Source",
+  "boilerplate.containers.Payroll.cv.submitApplication": "Submit Application",
+  "boilerplate.containers.Payroll.cv.endDate": "End Date",
+  "boilerplate.containers.Payroll.cv.save": "Save",
+  "boilerplate.containers.Payroll.cv.backToJobVacation": "Back To Job Vacation",
+  "boilerplate.containers.Payroll.cv.courseTitle": "Course Title",
+  "boilerplate.containers.Payroll.cv.editExperience": "Edit Experience",
+  "boilerplate.containers.Payroll.cv.department": "Department",
+  "boilerplate.containers.Payroll.cv.workPlace": "Work Place",
+  "boilerplate.containers.Payroll.cv.leaveReason": "Leave Reason",
+  "boilerplate.containers.Payroll.cv.startDate": "Start Date"
 }
