--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1109,7 +1109,7 @@
   "boilerplate.containers.Payroll.Attendance.weekend": "Weekend",
 
   "boilerplate.containers.Payroll.Attendance.absence":"Absence",
-  "boilerplate.containers.Payroll.Attendance.shift":"shift",
+  "boilerplate.containers.Payroll.Attendance.shift":"Shift",
   "boilerplate.containers.Payroll.Attendance.includingEmployeesWithoutAttendanceRule":"Including Employees Without Attendance Rule",
 
   "boilerplate.containers.Payroll.Attendance.AttendanceDate":"Attendance Date",
@@ -1162,6 +1162,11 @@
   "boilerplate.containers.Payroll.Attendance.SignInOnly":"Sign In Only",
   "boilerplate.containers.Payroll.Attendance.SignOutOnly":"Sign Out Only",
   "boilerplate.containers.Payroll.Attendance.NotAttendanceForTheDay":"Not Attendance For The Day",
+
+  "boilerplate.containers.Payroll.Attendance.serial":"Serial",
+  "boilerplate.containers.Payroll.Attendance.signIn":"Sign In",
+  "boilerplate.containers.Payroll.Attendance.signOut":"Sign Out",
+  "boilerplate.containers.Payroll.Attendance.notes":"Notes",
   
   "boilerplate.containers.Payroll.Attendance.AbsenceRules":"Absence ",
   "boilerplate.containers.Payroll.Attendance.DelayRules":"Delay ",
