finish StatisticalReport2 page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1377,6 +1377,41 @@
     "boilerplate.containers.Payroll.Attendance.totalOverTime":"اجمالى الوقت",
     "boilerplate.containers.Payroll.Attendance.perDepartment":"مجمع باليوم",
     "boilerplate.containers.Payroll.Attendance.details":"تفصيلي",
+
+    "boilerplate.containers.Payroll.Attendance.Code":"كود الموظف",
+    "boilerplate.containers.Payroll.Attendance.vacBalance":"الرصيد الاعتيادى",
+    "boilerplate.containers.Payroll.Attendance.Absence":"عدد ايام الغياب",
+    "boilerplate.containers.Payroll.Attendance.leaves":"عدد ايام الاجازة الاعتيادى",
+    "boilerplate.containers.Payroll.Attendance.casualL":"عدد ايام الاجازة العارضة",
+    "boilerplate.containers.Payroll.Attendance.deductedL":"اجازات مخصومة الراتب",
+    "boilerplate.containers.Payroll.Attendance.payedL":"اجازات مدفوعة الراتب",
+    "boilerplate.containers.Payroll.Attendance.sickL":"اجازات مرضى",
+    "boilerplate.containers.Payroll.Attendance.workedOfficial":"عدد ايام الاجازات الرسمية حضر فيها",
+    "boilerplate.containers.Payroll.Attendance.Official":"عدد ايام الاجازات الرسمية لم حضر فيها",
+    "boilerplate.containers.Payroll.Attendance.workedOfficialT":"اجمالى وقت حضورة بالاجازات الرسمية",
+    "boilerplate.containers.Payroll.Attendance.workedWeekendCount":"عدد الاجازات الرسمية حضر فيها",
+    "boilerplate.containers.Payroll.Attendance.Weekend":"عدد ايام الاجازات الاسبوعية لم يحضر فيها",
+    "boilerplate.containers.Payroll.Attendance.workedWeekendT":"اجمالى وقت حضورة  بيوم الاجازة الاسبوعية",
+    "boilerplate.containers.Payroll.Attendance.missingSignIn":"عدد مرات عدم التوقيع صباحا",
+    "boilerplate.containers.Payroll.Attendance.missingSignOut":"عدد مرات عدم التوقيع مساء",
+    "boilerplate.containers.Payroll.Attendance.total":"عدد مرات عدم التوقيع",
+    "boilerplate.containers.Payroll.Attendance.dayPermissionC":"عدد مرات الاذن الصباحى",
+    "boilerplate.containers.Payroll.Attendance.dayPermissionT":"اجمالى وقت الاذون الصباحية",
+    "boilerplate.containers.Payroll.Attendance.nightPermissionC":"عدد مرات الاذن المسائى",
+    "boilerplate.containers.Payroll.Attendance.nightPermissionT":"اجمالى وقت الاذون المسائية",
+    "boilerplate.containers.Payroll.Attendance.lateCount":"عدد مرات التاخير بدون اذن",
+    "boilerplate.containers.Payroll.Attendance.lateTime":"اجمالى وقت التاخير بدون اذن",
+    "boilerplate.containers.Payroll.Attendance.leaveEarlyC":"عدد مرات الانصراف المبكر بدون اذن",
+    "boilerplate.containers.Payroll.Attendance.leaveEarlyT":"اجمالى وقت الانصراف المبكر بدون اذن",
+    "boilerplate.containers.Payroll.Attendance.dayMissionsCount":"عدد الماموريات الصباحية",
+    "boilerplate.containers.Payroll.Attendance.dayMissionT":"اجمالى وقت الماموريات الصباحية",
+    "boilerplate.containers.Payroll.Attendance.nightMissionC":"عدد الماموريات المسائية",
+    "boilerplate.containers.Payroll.Attendance.nightMissionT":"اجمالى وقت الماموريات المسائية",
+    "boilerplate.containers.Payroll.Attendance.fullDayMissions":"عدد مرات المامورية - بيوم كامل",
+    "boilerplate.containers.Payroll.Attendance.overTimeC":"عدد مرات الاضافى",
+    "boilerplate.containers.Payroll.Attendance.overTimeT":"اجمالى وقت الاضافى",
+    "boilerplate.containers.Payroll.Attendance.confirmedOverTime":"اجمالى وقت الاضافى المعتمد",
+    
   
   
   "boilerplate.containers.Payroll.Workflow.documentName": "اسم الملف",
