--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1172,6 +1172,41 @@
   "boilerplate.containers.Payroll.Attendance.totalOverTime":"Total Over Time",
   "boilerplate.containers.Payroll.Attendance.perDepartment":"Per Department",
   "boilerplate.containers.Payroll.Attendance.details":"Details",
+
+  "boilerplate.containers.Payroll.Attendance.Code":"Code",
+  "boilerplate.containers.Payroll.Attendance.vacBalance":"Vac.Balance",
+  "boilerplate.containers.Payroll.Attendance.Absence":"Absence",
+  "boilerplate.containers.Payroll.Attendance.leaves":"leaves",
+  "boilerplate.containers.Payroll.Attendance.casualL":"Casual L.",
+  "boilerplate.containers.Payroll.Attendance.deductedL":"Deducted L.",
+  "boilerplate.containers.Payroll.Attendance.payedL":"Payed L.",
+  "boilerplate.containers.Payroll.Attendance.sickL":"Sick L.",
+  "boilerplate.containers.Payroll.Attendance.workedOfficial":"Worked Official",
+  "boilerplate.containers.Payroll.Attendance.Official":"Official",
+  "boilerplate.containers.Payroll.Attendance.workedOfficialT":"Worked Official T.",
+  "boilerplate.containers.Payroll.Attendance.workedWeekendCount":"Worked Weekend Count",
+  "boilerplate.containers.Payroll.Attendance.Weekend":"Weekend",
+  "boilerplate.containers.Payroll.Attendance.workedWeekendT":"Worked Weekend T.",
+  "boilerplate.containers.Payroll.Attendance.missingSignIn":"Missing Sign In",
+  "boilerplate.containers.Payroll.Attendance.missingSignOut":"Missing Sign Out",
+  "boilerplate.containers.Payroll.Attendance.total":"Total",
+  "boilerplate.containers.Payroll.Attendance.dayPermissionC":"Day Permission C.",
+  "boilerplate.containers.Payroll.Attendance.dayPermissionT":"Day Permission T.",
+  "boilerplate.containers.Payroll.Attendance.nightPermissionC":"Night Permission C.",
+  "boilerplate.containers.Payroll.Attendance.nightPermissionT":"Night Permission T",
+  "boilerplate.containers.Payroll.Attendance.lateCount":"Late Count",
+  "boilerplate.containers.Payroll.Attendance.lateTime":"Late Time",
+  "boilerplate.containers.Payroll.Attendance.leaveEarlyC":"Leave Early C.",
+  "boilerplate.containers.Payroll.Attendance.leaveEarlyT":"Leave Early T.",
+  "boilerplate.containers.Payroll.Attendance.dayMissionsCount":"Day Missions Count",
+  "boilerplate.containers.Payroll.Attendance.dayMissionT":"Day Mission T.",
+  "boilerplate.containers.Payroll.Attendance.nightMissionC":"Night Mission C.",
+  "boilerplate.containers.Payroll.Attendance.nightMissionT":"Night Mission T.",
+  "boilerplate.containers.Payroll.Attendance.fullDayMissions":"Full Day Missions",
+  "boilerplate.containers.Payroll.Attendance.overTimeC":"OverTime C.",
+  "boilerplate.containers.Payroll.Attendance.overTimeT":"OverTime T.",
+  "boilerplate.containers.Payroll.Attendance.confirmedOverTime":"Confirmed OverTime",
+
   
   "boilerplate.containers.Payroll.Attendance.AbsenceRules":"Absence ",
   "boilerplate.containers.Payroll.Attendance.DelayRules":"Delay ",
