finish `JobAdvertisement` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1885,6 +1885,7 @@
   "boilerplate.containers.Payroll.medicalInsurance.privlMedCareNumber": "رقم البطاقة العلاجية",
   "boilerplate.containers.Payroll.medicalInsurance.All": "الكل",
 
+  "boilerplate.containers.Payroll.recruitment.id": "الكود",
   "boilerplate.containers.Payroll.recruitment.jobName": "اسم الوظيقة",
   "boilerplate.containers.Payroll.recruitment.jobCode": "كود الوظيفة",
   "boilerplate.containers.Payroll.recruitment.experience": "سنوات الخبرة",
