--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1846,9 +1846,11 @@
   "boilerplate.containers.Payroll.medicalInsurance.privlMedCareNumber": "Priv.Medi.Care Number",
   "boilerplate.containers.Payroll.medicalInsurance.All": "All",
 
+  "boilerplate.containers.Payroll.recruitment.id": "Id",
   "boilerplate.containers.Payroll.recruitment.jobName": "Job Name",
   "boilerplate.containers.Payroll.recruitment.jobCode": "Job Code",
   "boilerplate.containers.Payroll.recruitment.experience": "Experience",
+  "boilerplate.containers.Payroll.recruitment.expireDate": "Expire Date",
   "boilerplate.containers.Payroll.recruitment.department": "Department",
   "boilerplate.containers.Payroll.recruitment.organization": "Organization",
   "boilerplate.containers.Payroll.recruitment.branch": "Branch",
