finish OverTimeReport page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1414,6 +1414,45 @@
 
 
     "boilerplate.containers.Payroll.Attendance.totalWorkHours":"اجمالى عدد ساعات العمل",
+
+
+    "boilerplate.containers.Payroll.Attendance.IncludeLeavesAndShiftLeaves":"يشمل الاجازات و اجازات الوردية",
+    "boilerplate.containers.Payroll.Attendance.perEmployee":"تجميع على مستوى الموظف",
+    "boilerplate.containers.Payroll.Attendance.perEmployeeDay":"تجميع على مستوى الموظف / اليوم",
+    "boilerplate.containers.Payroll.Attendance.PerDepartment":"تجميع على مستوى الادارة",
+    "boilerplate.containers.Payroll.Attendance.ExtraTime":"الوقت الاضافى",
+    "boilerplate.containers.Payroll.Attendance.ManualExtraTime":"الوقت الاضافى المعدل",
+    "boilerplate.containers.Payroll.Attendance.Day1":"يوم 1",
+    "boilerplate.containers.Payroll.Attendance.Day2":"يوم 2",
+    "boilerplate.containers.Payroll.Attendance.Day3":"يوم 3",
+    "boilerplate.containers.Payroll.Attendance.Day4":"يوم 4",
+    "boilerplate.containers.Payroll.Attendance.day5":"يوم 5",
+    "boilerplate.containers.Payroll.Attendance.Day6":"يوم 6",
+    "boilerplate.containers.Payroll.Attendance.Day7":"يوم 7",
+    "boilerplate.containers.Payroll.Attendance.Day8":"يوم 8",
+    "boilerplate.containers.Payroll.Attendance.Day9":"يوم 9",
+    "boilerplate.containers.Payroll.Attendance.Day10":"يوم 10",
+    "boilerplate.containers.Payroll.Attendance.Day11":"يوم 11",
+    "boilerplate.containers.Payroll.Attendance.Day12":"يوم 12",
+    "boilerplate.containers.Payroll.Attendance.Day13":"يوم 13",
+    "boilerplate.containers.Payroll.Attendance.Day14":"يوم 14",
+    "boilerplate.containers.Payroll.Attendance.Day15":"يوم 15",
+    "boilerplate.containers.Payroll.Attendance.Day16":"يوم 16",
+    "boilerplate.containers.Payroll.Attendance.Day17":"يوم 17",
+    "boilerplate.containers.Payroll.Attendance.Day18":"يوم 18",
+    "boilerplate.containers.Payroll.Attendance.Day19":"يوم 19",
+    "boilerplate.containers.Payroll.Attendance.Day20":"يوم 20",
+    "boilerplate.containers.Payroll.Attendance.Day21":"يوم 21",
+    "boilerplate.containers.Payroll.Attendance.Day22":"يوم 22",
+    "boilerplate.containers.Payroll.Attendance.Day23":"يوم 23",
+    "boilerplate.containers.Payroll.Attendance.Day24":"يوم 24",
+    "boilerplate.containers.Payroll.Attendance.Day25":"يوم 25",
+    "boilerplate.containers.Payroll.Attendance.Day26":"يوم 26",
+    "boilerplate.containers.Payroll.Attendance.Day27":"يوم 27",
+    "boilerplate.containers.Payroll.Attendance.Day28":"يوم 28",
+    "boilerplate.containers.Payroll.Attendance.Day29":"يوم 29",
+    "boilerplate.containers.Payroll.Attendance.Day30":"يوم 30",
+    "boilerplate.containers.Payroll.Attendance.Day31":"يوم 31",
     
   
   
