--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1210,6 +1210,45 @@
 
   "boilerplate.containers.Payroll.Attendance.totalWorkHours":"Total Work Hours",
 
+
+  "boilerplate.containers.Payroll.Attendance.IncludeLeavesAndShiftLeaves":"Include Leaves And Shift Leaves",
+  "boilerplate.containers.Payroll.Attendance.perEmployee":"Per Employee",
+  "boilerplate.containers.Payroll.Attendance.perEmployeeDay":"Per Employee / Day",
+  "boilerplate.containers.Payroll.Attendance.PerDepartment":"Per Department",
+  "boilerplate.containers.Payroll.Attendance.ExtraTime":"ExtraTime",
+  "boilerplate.containers.Payroll.Attendance.ManualExtraTime":"Manual ExtraTime",
+  "boilerplate.containers.Payroll.Attendance.Day1":"Day(s)1",
+  "boilerplate.containers.Payroll.Attendance.Day2":"Day(s)2",
+  "boilerplate.containers.Payroll.Attendance.Day3":"Day(s)3",
+  "boilerplate.containers.Payroll.Attendance.Day4":"Day(s)4",
+  "boilerplate.containers.Payroll.Attendance.day5":"Day(s)5",
+  "boilerplate.containers.Payroll.Attendance.Day6":"Day(s)6",
+  "boilerplate.containers.Payroll.Attendance.Day7":"Day(s)7",
+  "boilerplate.containers.Payroll.Attendance.Day8":"Day(s)8",
+  "boilerplate.containers.Payroll.Attendance.Day9":"Day(s)9",
+  "boilerplate.containers.Payroll.Attendance.Day10":"Day(s)10",
+  "boilerplate.containers.Payroll.Attendance.Day11":"Day(s)11",
+  "boilerplate.containers.Payroll.Attendance.Day12":"Day(s)12",
+  "boilerplate.containers.Payroll.Attendance.Day13":"Day(s)13",
+  "boilerplate.containers.Payroll.Attendance.Day14":"Day(s)14",
+  "boilerplate.containers.Payroll.Attendance.Day15":"Day(s)15",
+  "boilerplate.containers.Payroll.Attendance.Day16":"Day(s)16",
+  "boilerplate.containers.Payroll.Attendance.Day17":"Day(s)17",
+  "boilerplate.containers.Payroll.Attendance.Day18":"Day(s)18",
+  "boilerplate.containers.Payroll.Attendance.Day19":"Day(s)19",
+  "boilerplate.containers.Payroll.Attendance.Day20":"Day(s)20",
+  "boilerplate.containers.Payroll.Attendance.Day21":"Day(s)21",
+  "boilerplate.containers.Payroll.Attendance.Day22":"Day(s)22",
+  "boilerplate.containers.Payroll.Attendance.Day23":"Day(s)23",
+  "boilerplate.containers.Payroll.Attendance.Day24":"Day(s)24",
+  "boilerplate.containers.Payroll.Attendance.Day25":"Day(s)25",
+  "boilerplate.containers.Payroll.Attendance.Day26":"Day(s)26",
+  "boilerplate.containers.Payroll.Attendance.Day27":"Day(s)27",
+  "boilerplate.containers.Payroll.Attendance.Day28":"Day(s)28",
+  "boilerplate.containers.Payroll.Attendance.Day29":"Day(s)29",
+  "boilerplate.containers.Payroll.Attendance.Day30":"Day(s)30",
+  "boilerplate.containers.Payroll.Attendance.Day31":"Day(s)31",
+
   
   "boilerplate.containers.Payroll.Attendance.AbsenceRules":"Absence ",
   "boilerplate.containers.Payroll.Attendance.DelayRules":"Delay ",
