create `JobApplicationPreview` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1979,6 +1979,8 @@
   "boilerplate.containers.Payroll.cv.militaryStatus": "الحالة العسكرية",
   "boilerplate.containers.Payroll.cv.gender": "النوع",
   "boilerplate.containers.Payroll.cv.uploadCV": "رفع السيرة الذاتية",
+  "boilerplate.containers.Payroll.cv.CVUnderReviewing": "السيرة الذاتية قيد المراجعة",
+  "boilerplate.containers.Payroll.cv.previewCV": "عرض السيرة الذاتية",
   "boilerplate.containers.Payroll.cv.preview": "معاينة",
   "boilerplate.containers.Payroll.cv.uploadImage": "رفع الصورة",
   "boilerplate.containers.Payroll.cv.personalIDInfo": "معلومات الهوية الشخصية",
