--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1512,6 +1512,15 @@
     "boilerplate.containers.Payroll.Attendance.PrintByEmployee": "طباعة بالموظف",
     "boilerplate.containers.Payroll.Attendance.PrintByDate": "طباعة بالتاريخ",
     "boilerplate.containers.Payroll.Attendance.DetailedAttendanceReport": "تقرير الحضور والانصراف التفصيلى",
+
+
+
+    "boilerplate.containers.Payroll.Attendance.lateHoursNotAuth": "تاخير بدون اذن",
+    "boilerplate.containers.Payroll.Attendance.lateHoursAuth": "تاخير بإذن",
+    "boilerplate.containers.Payroll.Attendance.leaveEarlyNotAuth": "خروج مبكر بدون اذن",
+    "boilerplate.containers.Payroll.Attendance.leaveEarlyAuth": "خروج مبكر بإذن",
+    "boilerplate.containers.Payroll.Attendance.weekendOverTime": "اضافى عطلة الاسبوع",
+    "boilerplate.containers.Payroll.Attendance.officialVacationOverTime": "اضافى ايام الاجازة",
   
   
   "boilerplate.containers.Payroll.Workflow.documentName": "اسم الملف",
